parse-display-tests/tests/compile_fail/from_str_no_field_in_regex.rs
use parse_display::FromStr;

#[derive(FromStr)]
#[from_str(regex = "abc")]
struct TestStruct {
    x: u8,
}

fn main() {}
