parse-display-tests/tests/compile_fail/from_str_no_field_in_regex.stderr
error: field `x` is not appear in format.
 --> $DIR/from_str_no_field_in_regex.rs:3:10
  |
3 | #[derive(FromStr)]
  |          ^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
